--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,7 +45,7 @@ justify-content: center;
 .navbar {
   background-color: #333;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
-  
+  color: white !important;
 }
 
 
@@ -222,5 +222,28 @@ background-color: #d1e7dd; /* Color de fondo al seleccionar una fila */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 500px;
+}
+
+
+
+.navbar .nav-link, 
+.navbar .navbar-brand {
+  color: white !important; 
+}
+
+
+.navbar .nav-link:hover, 
+.navbar .navbar-brand:hover {
+  color: #73818F !important; 
+}
+
+
+.navbar .navbar-toggler-icon:hover {
+  background-color: #73818F !important; 
+}
+
+
+.navbar .nav-item.active .nav-link:hover {
+  color: #73818F !important; 
 }
 
