--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,9 +14,8 @@ flex-direction: column;
 min-height: 100vh; 
 }
 
-.encuadro{
-background: white;
-}
+
+
 
 .container {
 flex: 1; 
@@ -104,7 +103,6 @@ margin-right: 10px;
 .card {
 max-width: 14rem;
 width: 200px; 
-
 }
 
 
@@ -247,3 +245,31 @@ background-color: #d1e7dd; /* Color de fondo al seleccionar una fila */
   color: #73818F !important; 
 }
 
+.encuadro {
+  background: white;
+  margin: 20px; /* Ajusta este valor según tus necesidades */
+  padding: 20px; /* Esto agrega un espacio interno para que el contenido no quede pegado al borde */
+  border-radius: 10px; /* Opcional, para darle bordes redondeados */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Opcional, para agregar sombra al contenedor */
+}
+
+.encuadro2 {
+  background: white;
+  margin: 20px auto; /* 'auto' en los márgenes laterales centra horizontalmente */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 600px; /* Limita el ancho del contenedor */
+}
+
+.custom-footer {
+  position: relative;
+  margin-top: auto;
+}
+.min-vh-100 {
+  min-height: 100vh;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
